[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level/World.gd" type="Script" id=3]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/JOJOXD.mp3" type="AudioStream" id=5]
[ext_resource path="res://HUD/Shop.tscn" type="PackedScene" id=6]
[ext_resource path="res://Level/Camera2D.gd" type="Script" id=7]
[ext_resource path="res://Assets/DebugFreeTrial-MVdYB.otf" type="DynamicFontData" id=9]

[sub_resource type="Environment" id=1]
background_mode = 4
ambient_light_color = Color( 1, 1, 1, 1 )
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = true
glow_levels/4 = true
glow_levels/6 = true
glow_levels/7 = true
glow_bloom = 0.17
glow_blend_mode = 0
glow_bicubic_upscale = true
glow_high_quality = true
adjustment_enabled = true
adjustment_brightness = 1.44
adjustment_contrast = 1.7
adjustment_saturation = 1.81

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.262745, 0.254902, 0.254902, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="Theme" id=4]
ProgressBar/colors/font_color = Color( 0.341176, 0.341176, 0.341176, 1 )
ProgressBar/colors/font_color_shadow = Color( 0.305882, 0.235294, 0.235294, 1 )
ProgressBar/fonts/font = null
ProgressBar/styles/bg = SubResource( 2 )
ProgressBar/styles/fg = SubResource( 3 )

[node name="World" type="Node" groups=["Main"]]
pause_mode = 2
physics_interpolation_mode = 2
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
pause_mode = 1
margin_left = -8546.0
margin_top = -4185.0
margin_right = 9425.0
margin_bottom = 5353.0
color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )

[node name="Player" parent="." instance=ExtResource( 1 )]
pause_mode = 1
position = Vector2( 515, 302 )
scale = Vector2( 0.5, 0.5 )
collision_mask = 2

[node name="Enemy" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 510, -167 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
pause_mode = 1
environment = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 1

[node name="Spawn" type="Position2D" parent="."]
pause_mode = 1
position = Vector2( 60, -151 )

[node name="Spawn2" type="Position2D" parent="."]
pause_mode = 1
position = Vector2( 526, -240 )

[node name="Spawn4" type="Position2D" parent="."]
pause_mode = 1
position = Vector2( 963, -229 )

[node name="Spawn5" type="Position2D" parent="."]
pause_mode = 1
position = Vector2( 162, 700 )

[node name="Spawn6" type="Position2D" parent="."]
pause_mode = 1
position = Vector2( 889, 729 )

[node name="Spawn7" type="Position2D" parent="."]
pause_mode = 1
position = Vector2( 1331, 293 )

[node name="SpawnTimer" type="Timer" parent="."]
pause_mode = 1
wait_time = 5.0

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer2" instance=ExtResource( 4 )]

[node name="CanvasLayer3" type="CanvasLayer" parent="."]
layer = 2

[node name="Shop" parent="CanvasLayer3" instance=ExtResource( 6 )]
margin_left = 3.0
margin_right = 16.0
margin_bottom = -3.0

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]

[node name="Song" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 8, 8 )
script = ExtResource( 7 )

[node name="Screen_Shake_Time" type="Timer" parent="Camera2D"]

[node name="IncreaseTimer" type="Timer" parent="."]
wait_time = 7.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 373.0
margin_top = 27.0
margin_right = 653.0
margin_bottom = 87.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 280.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 5 )
text = "Score x2"
align = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
margin_top = 31.0
margin_right = 280.0
margin_bottom = 41.0
rect_min_size = Vector2( 280, 10 )
theme = SubResource( 4 )
max_value = 6.0
value = 6.0
percent_visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="Camera2D/Screen_Shake_Time" to="Camera2D" method="_on_Screen_Shake_Time_timeout"]
[connection signal="timeout" from="IncreaseTimer" to="." method="_on_IncreaseTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
